fix horizontal scrolling ep 3, correct header bottom gap

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -36,6 +36,7 @@
     width: 100%;
     margin: 0 auto;
     padding: 28px 0 0;
+    min-height: 56px;
     height: 56px;
     margin-bottom: 0;
     padding-bottom: 0;
