--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -196,7 +196,7 @@
   }
 
   .profile__button_type_add {
-    width: 150px;
+    width: 282px;
     height: 50px;
   }
 }
